<?xml version="1.0"?>
<package format="2">
  <name>behaviortree_ros</name>
  <version>0.0.1</version>
  <description>
    This package provides useful utilities on top of BehaviorTree.CPP.
  </description>

  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>
  <license>MIT</license>
  <author>Davide Faconti</author>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Message generation (build-time only) -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Use <depend> for packages needed at build, export, and runtime -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dji_srvs</depend>
  <depend>apriltag_msgs</depend>

</package>
